# mo-ti

./: .codacy.yaml  .env.example  .gitignore  .semgrepignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  biome.json  eslint.config.js  index.html  lara.yaml  package.json  playwright.config.ts  pnpm-lock.yaml  trademarks.md  vite.config.ts
.claude/: settings.local.json
.github/: HOOKS.md  (+1 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/agent-docs/: all.md  search-index.json  start.md  templates.md
src-tauri/resources/agent-docs/pages/start/: install.md
src-tauri/src/: ai_model_tools.rs  ai_models.rs  app_icon.rs  app_updater.rs  lib.rs  menu.rs  search.rs  settings.rs  sync.rs  telemetry.rs  vault_list.rs  vault_watcher.rs  webdav_secrets.rs  window_state.rs
src-tauri/src/cli_agent_runtime/: shell_env.rs  windows_cmd_shim.rs
src-tauri/src/commands/: memory.rs  mod.rs  pdf_export.rs  runtime.rs  system.rs  webdav_secrets.rs
src-tauri/src/commands/vault/: boundary.rs  lifecycle_cmds.rs  rename_cmds.rs  scan_cmds.rs  view_cmds.rs
src-tauri/src/frontmatter/: ops.rs
src-tauri/src/git/: author.rs  clone.rs  command.rs  commit.rs  conflict.rs  connect.rs  credentials.rs  dates.rs  file_url.rs  history.rs  mod.rs  pulse.rs  remote.rs  remote_config.rs  status.rs
src-tauri/src/vault/: cache.rs  config_seed.rs  entry.rs  file.rs  frontmatter.rs  frontmatter_regression_tests.rs  getting_started.rs  ignored.rs  mod.rs  path_identity.rs  rename.rs  view_date_filters.rs  view_migration.rs  view_relationships.rs  view_tests.rs  view_value_conversions.rs  views.rs
src-tauri/src/vault/mod_tests/: type_and_links.rs
src-tauri/tests/: git_connect_no_remote.rs
(+461 files in other folders)
